# controller/collaborator.js
@@ -1,56 +1,55 @@
-
-const jwtTokenGenerator = require('../utility/TokenGeneration');
-let service =require('../services/collaborator');
-//const logger = require('../config/winston')
+let service = require('../services/collaborator');
+const logger = require('../config/winston.js')
 require('express-validator');
-class labelController{
+
+class labelController {
 
     createCollaborator(req, res) {
-        console.log("req.body.data._id---",req.body.data._id);        
+        logger.info("req.body.data._id---", req.body.data._id);
         let response = {}
-        try {          
-            console.log("req.body---,", req.body);
+        try {
+            logger.info("req.body---,", req.body);
             let data = {
                 userID: req.body.data._id,
-                noteId:req.params.noteId, 
-                collaboratorId:req.params.collaboratorId             
+                noteId: req.params.noteId,
+                collaboratorId: req.params.collaboratorId
             }
-            console.log("data ---",data);           
+            logger.info("data ---", data);
             service.collaboratorService(data)
-                    .then(data => {
-                        response.success = true
-                        response.message = " collaborate note sucessesfully"
-                        response.data = data
-                        return res.status(200).send(response)
-                    })
-                    .catch(errors => {
-                        response.success = false
-                        response.message = " collaborate note  does not create "
-                        response.error = errors
+                .then(data => {
+                    response.success = true
+                    response.message = " collaborate note sucessesfully"
+                    response.data = data
+                    return res.status(200).send(response)
+                })
+                .catch(errors => {
+                    response.success = false
+                    response.message = " collaborate note  does not create "
+                    response.error = errors
 
-                      return res.status(422).send(response)
+                    return res.status(422).send(response)
 
-                    })
+                })
         }
         catch (error) {
             response.success = false
             response.message = " something wrong "
-            response.error = errors           
+            response.error = errors
             return res.status(500).send(response)
         }
     }
-   /**
-         * @function noteDelete is a function use to Delete  note  from database
-         * @param {string} req 
-         * @param {string} res 
-         */
-        deleteCollaborator(req, res) {
-            let response = {}
-            try{
-                const data = {}
-                data._id = req.params.collaboratorId,
-                data.userID= req.body.data._id
-              
+    /**
+          * @function noteDelete is a function use to Delete  note  from database
+          * @param {string} req 
+          * @param {string} res 
+          */
+    deleteCollaborator(req, res) {
+        let response = {}
+        try {
+            const data = {}
+            data._id = req.params.collaboratorId,
+                data.userID = req.body.data._id
+
             return new Promise((resolve, reject) => {
                 service.deleteServices(data)
                     .then(data => {
@@ -69,11 +68,10 @@ class labelController{
         }
         catch (error) {
             response.success = false
-            response.message = error          
+            response.message = error
             reject(res.status(500).send(response))
         }
-        }
-
+    }
 }
 
-module.exports= new labelController()
+module.exports = new labelController()
