# routers/routers.js
@@ -6,30 +6,31 @@ let models = require('../app/models/user')
 let user = require('../controller/user')
 let note = require('../controller/note')
 let label= require('../controller/label')
+let logger =require('../config/winston.js')
 let collaborator= require('../controller/collaborator')
 
 routes.post('/registration', user.registration)
 routes.post('/login', user.login)
-routes.post('/forgetPassword', user.forgetPasswordController)//
+routes.post('/forgetPassword', user.forgetPasswordController)
 routes.post('/reset', token.verifyToken, user.resetPasswordController)
 routes.get('/allUser',user.allUser)
 
 routes.post('/notes', token.verifyToken,note.note)
 routes.get('/notes',token.verifyToken,note.noteSequence)
 routes.put('/notes/:noteId',token.verifyToken, note.noteUpdate)
-routes.delete('/notes/:noteId',token.verifyToken, note.noteDelete)//
+routes.delete('/notes/:noteId',token.verifyToken, note.noteDelete)
 routes.get('/search/:searchKey',token.verifyToken, note.search)
 routes.put('/colorNote/:noteId',token.verifyToken,note.colorNote)
 
-routes.put('/archive/:noteId',token.verifyToken,note.isArchive)//
+routes.put('/archive/:noteId',token.verifyToken,note.isArchive)
 routes.put('/unArchive/:noteId',note.isUnArchive)//
 routes.get('/archive' ,token.verifyToken,note.AllArchive)
 
 routes.delete('/trash/:noteId',token.verifyToken,note.deleteTrash) //
 routes.put('/restoreNote/:noteId',token.verifyToken,note.restoreTrash) //
 routes.get('/trash',[token.verifyToken, 
-    (req,res, next)=>{console.log('middleware called 2'); return next();},
-    (req,res, next)=>{console.log('middleware called 3'); return next();}],
+    (req,res, next)=>{logger.info('middleware called 2'); return next();},
+    (req,res, next)=>{logger.info('middleware called 3'); return next();}],
     note.allTrash) 
 
 routes.put('/reminder/:noteId',token.verifyToken,note.reminder)
@@ -45,12 +46,11 @@ routes.post('/collaborator/:noteId/:collaboratorId',token.verifyToken,collaborat
 routes.delete('/collaborator/:collaboratorId',token.verifyToken,collaborator.deleteCollaborator)
 
 routes.get('/isEmailVerified/:url', (request, response) => {
-    console.log("email verifcation..", request.params.url);
+    logger.info("email verifcation..", request.params.url);
     return new Promise((resolve, reject) => {
         models.findOne({ 'urlCode': request.params.url })
             .then((data) => {
-               // console.log('daa  jhjhjhj', data);
-
+               // logger.info('data', data);
                 if (data === null) {
                     //Not Found, 404, Page Not Found, or Server Not Found error message
                     reject(response.status(404).send('url not found'))
@@ -74,13 +74,13 @@ const singleUpload = upload.single('image');
 routes.post('/image-upload', token.verifyToken, function (req, res) {
     let data={}
     data._id= req.body.data._id,
-    // console.log("user Id",rreq.body.data._id);  
+    // logger.info("user Id",rreq.body.data._id);  
     singleUpload(req, res, function (err) {
         if (err) {          
-            console.log('File ERROR', err);
+            logger.info('File ERROR', err);
             return res.status(422).send({ errors: [{ title: 'File Upload Error', detail: err.message }] });
         }
-        console.log('request',req.file.location);  
+        logger.info('request',req.file.location);  
         data.imageUrl=req.file.location   
         user.addImage(data,res)       
         //return res.json({ 'imageUrl': req.file.location });
